# pymoba

./: .gitignore  Makefile  README.md  azure_storage_test.py  config.yaml  pyproject.toml  requirements.txt
scripts/: save_requirements.py  save_requirements.sh
src/pymoba/: vision.py
