[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-eggs"
version = "0.0.1"
description = "ML and reinforcement learning framework for games"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Xavier C. Gill", email = "xaviercgill@gmail.com"}
]
requires-python = ">= 3.10"
keywords = [
  "MOBA",
  "video games",
  "machine learning",
  "computer vision",
  "artificial intelligence",
  "deep neural network"
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: GNU General Public License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

#[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#Issues = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

#dependencies = []

#[project.optional-dependencies]
#gui = []
#cli = []